test: 상자된 종목의 정보 조회 테스트 추가